# chascuro

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
e2e/: mobile-onboarding.spec.ts  offline-shell.spec.ts  onboarding.ts  sdk-worker-smoke.spec.ts
e2e/chat/: mdk-native-interoperability.spec.ts  mdk-product-flow.spec.ts  mdk-product-multi-conversation.spec.ts  mdk-pwa-hardening.spec.ts  mdk-relay-runtime.spec.ts  mdk-runtime.spec.ts  mdk-two-profile-runtime.spec.ts
e2e/config/: playwright.marmot-cross-browser.config.ts  playwright.marmot-relay.config.ts
e2e/live-federation/: compatibility.spec.ts
runtime/marmot-web/: Cargo.toml  README.md  rust-toolchain.toml
runtime/marmot-web/crates/runtime/: Cargo.toml
runtime/marmot-web/crates/runtime/src/: lib.rs
runtime/marmot-web/crates/storage-memory/: Cargo.toml
runtime/marmot-web/crates/storage-memory/src/: lib.rs
runtime/marmot-web/crates/storage-sqlite-web/: Cargo.toml
runtime/marmot-web/crates/storage-sqlite-web/src/: lib.rs
runtime/marmot-web/crates/transport-web/: Cargo.toml
runtime/marmot-web/crates/transport-web/src/: lib.rs
runtime/marmot-web/crates/wasi-engine/: Cargo.toml
runtime/marmot-web/crates/wasi-engine/src/: lib.rs
runtime/marmot-web/crates/wasm/: Cargo.toml
runtime/marmot-web/crates/wasm/src/: lib.rs
runtime/marmot-web/scripts/: build-wasm.sh  cargo-wasm.sh
scripts/: build-marmot-native-peer.mjs  check-production-chat-bundle.mjs  generate-icons.mjs  nostr-test-relay.mjs  validate-production-chat-config.mjs
src/: main.tsx  qrcode.d.ts  styles.css  vite-env.d.ts
src/app/: App.test.tsx  App.tsx  wallet-app-controller.test.tsx  wallet-app-controller.ts  wallet-app-types.ts  wallet-record.test.ts  wallet-record.ts
src/config/: security-headers.test.ts  security-headers.ts
src/domain/: chat-address.ts  chat-error.ts  chat.ts  federation.test.ts  federation.ts  index.ts  input.test.ts  input.ts  lnurl.test.ts  lnurl.ts  money.test.ts  money.ts  operation.test.ts  operation.ts  payments.test.ts  payments.ts  recovery.ts  wallet-error.test.ts  wallet-error.ts
src/features/chat/: ChatApp.tsx  ChatContactsScreen.tsx  ChatDetailsScreen.tsx  ChatInviteReviewScreen.tsx  ChatListScreen.test.tsx  ChatListScreen.tsx  ChatProductScreens.test.tsx  ChatProvider.tsx  ChatScanScreen.tsx  ChatSetupScreen.test.tsx  ChatSetupScreen.tsx  ConversationScreen.test.tsx  ConversationScreen.tsx  chat-context.ts  chat-route.ts
src/features/identity/: IdentitySetupScreen.tsx
src/features/onboarding/: FederationInviteScreen.tsx  FederationReviewScreen.tsx  FederationScreens.test.tsx  ReadyScreen.tsx  SetupScreen.tsx  UnlockScreen.tsx  WelcomeScreen.tsx
src/features/shared/: AmountKeypad.tsx  BitcoinMark.tsx  Keypad.tsx  OnboardingProgress.tsx  PinPad.tsx  QrCode.tsx  QrScanner.tsx  QrTools.test.tsx  ScreenFrame.tsx  SendReceiveShell.tsx  icons.tsx  share.ts
src/features/status/: StatusScreens.tsx
src/features/wallet/: HomeScreen.test.tsx  HomeScreen.tsx  screen-transition.ts  wallet-screen-components.tsx  wallet-screen-helpers.ts
src/services/chat/: chat-capabilities.test.ts  chat-capabilities.ts  chat-controller.test.ts  chat-controller.ts  chat-payment-envelope.test.ts  chat-payment-envelope.ts  chat-service.ts  chat-session-lifecycle.test.ts  chat-session-lifecycle.ts  fake-chat-service.test.ts  fake-chat-service.ts  mdk-chat-rpc-client.test.ts  mdk-chat-rpc-client.ts  mdk-chat-service.test.ts  mdk-chat-service.ts  mdk-product-rpc-client.test.ts  mdk-product-rpc-client.ts  mdk-product-rpc.ts  mdk-product-worker.ts  mdk-relay-client.test.ts  mdk-relay-client.ts  mdk-relay-probe-client.ts  mdk-relay-rpc.ts  mdk-runtime-client.ts  mdk-runtime-rpc.test.ts  mdk-runtime-rpc.ts  mdk-two-profile-client.ts  mdk-two-profile-rpc.ts  mdk-two-profile-worker.ts  mdk-wasi-host.ts  mdk-worker.ts
src/services/lnurl/: index.ts  lnurl-pay.test.ts  lnurl-pay.ts
src/services/persistence/: encrypted-record-store.test.ts  encrypted-record-store.ts  erase-wallet-data.test.ts  erase-wallet-data.ts  vault-store.test.ts  vault-store.ts  vault.test.ts  vault.ts  wallet-activity-repository.test.ts  wallet-activity-repository.ts
src/styles/: base.css  chat.css  onboarding.css  wallet.css
(+39 files in other folders)
