[workspace]
members = [
    "crates/runtime",
    "crates/storage-memory",
    "crates/storage-sqlite-web",
    "crates/transport-web",
    "crates/wasm",
    "crates/wasi-engine",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
cgka-engine = { git = "https://github.com/marmot-protocol/mdk.git", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
cgka-traits = { git = "https://github.com/marmot-protocol/mdk.git", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
chacha20poly1305 = "0.10"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.17", features = ["js"] }
hex = "0.4"
futures = "0.3"
js-sys = "0.3"
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip59"] }
openmls = { version = "~0.8.1", features = ["extensions-draft-08", "js"] }
openmls-memory-storage = { package = "openmls_memory_storage", version = "0.5.0", features = ["extensions-draft-08"] }
rand = "0.8"
rusqlite = { version = "=0.32.1", default-features = false, features = ["bundled", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
runtime = { package = "marmot-web-runtime", path = "crates/runtime" }
storage-memory = { path = "crates/storage-memory" }
storage-sqlite-web = { path = "crates/storage-sqlite-web" }
transport-web = { path = "crates/transport-web" }
transport-nostr-peeler = { git = "https://github.com/marmot-protocol/mdk.git", rev = "e391adc133a9b60e420da7a0446f014a180ac8d2" }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
