[package]
name = "marmot-web-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
base64.workspace = true
cgka-engine.workspace = true
cgka-traits.workspace = true
futures.workspace = true
hex.workspace = true
nostr.workspace = true
openmls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
storage-memory.workspace = true
transport-web.workspace = true
