[package]
name = "marmot-web-wasi-engine"
description = "WASI reactor exposing the real MDK engine to a browser Worker clock host."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures.workspace = true
runtime.workspace = true
serde_json.workspace = true
storage-sqlite-web.workspace = true
